fix logo alignment

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -16,7 +16,10 @@ $accent: #FF5733;
 .mainbody{
     height: 700px;
 }
-
+.navbar-logo {
+    font-weight: 700;
+    margin-left: 10px;
+}
 
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
